k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-frontend
  labels:
    app: k8s-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-frontend
  template:
    metadata:
      labels:
        app: k8s-frontend
    spec:
      containers:
        - name: k8s-frontend-container
          image: node:18-alpine
          imagePullPolicy: IfNotPresent
          command: ["node","server.js"]
          workingDir: /usr/src/app
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          volumeMounts:
            - name: frontend-files
              mountPath: /usr/src/app
      volumes:
        - name: frontend-files
          configMap:
            name: k8s-frontend-files
