k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-api
spec:
  selector:
    app: k8s-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
