k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend
spec:
  selector:
    app: k8s-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
